<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.SearchToDoActivity">

        <include
            android:id="@+id/search_layout"
            layout="@layout/search_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/chkUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="8dp"
            android:tag="filterUser"
            android:text="@string/by_user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_layout" />

        <CheckBox
            android:id="@+id/chkToDo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="filterTodo"
            android:text="@string/by_todo"
            app:layout_constraintBottom_toBottomOf="@+id/chkUser"
            app:layout_constraintStart_toEndOf="@+id/chkUser"
            app:layout_constraintTop_toTopOf="@+id/chkUser" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_to_do"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvResultFor"
            tools:listitem="@layout/search_to_do_adapter_layout" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/recycler_to_do"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/recycler_to_do"
            app:layout_constraintTop_toTopOf="@+id/recycler_to_do"
            app:layout_constraintVertical_bias="0.497" />

        <TextView
            android:id="@+id/tvNoData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/recycler_to_do"
            app:layout_constraintEnd_toEndOf="@+id/recycler_to_do"
            app:layout_constraintStart_toStartOf="@+id/recycler_to_do"
            app:layout_constraintTop_toTopOf="@+id/recycler_to_do" />

        <TextView
            android:id="@+id/tvResultFor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chkUser" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>